# video-keyframe-extractor

./: .gitignore  README.md  USER_GUIDE.md  package-lock.json  package.json  test.py
backend/: .gitignore  Procfile  main.py  pyproject.toml  requirements.txt  video_processor.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: video.py
backend/app/services/: video.py
docs/: threshold-guide.md
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend_backup/: App.jsx  App.tsx
frontend_backup/components/: VideoUpload.tsx
src/app/: layout.tsx  page.tsx
